files/style.css
body {
    font-family: "Noto Sans";
    display: flex;
    flex-direction: column;
    background: green;
    font-size: 20px;
    margin: 0;
}

div {
    width: fit-content;
    height: fit-content;
}

header {
    margin-bottom: 5px;
    font-weight: 500;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    max-width: 422px;
}

.header-content {
    display: flex;
    flex-direction: row;
}

.header-text {
    display: flex;
    flex-direction: column;
}

.preview {
    width: 50px;
    height: 50px;
    margin-right: 10px;
    margin-top: 5px;
    border-radius: 10px;
}

.photo {
    border-radius: 10px;
    margin-right: 5px;
    margin-bottom: 5px;
    width: 100%;
}

p {
    margin: 0 50px 0 0;
}

.speeches {
    max-width: 512px;
    border-right: 1px solid black;
    border-bottom: 1px solid black;
    padding-left: 5px;
    padding-top: 5px;
}

.speech {
    display: flex;
    flex-direction: row;
    position: relative;
    padding-right: 5px;
}

.messages {
    display: flex;
    flex-direction: column;
    position: relative;
    margin-left: 60px;
}

.message {
    display: flex;
    padding: 10px;
    border-radius: 10px;
    margin-bottom: 5px;
    min-width: 80px;
}

.message:last-child {
    border-radius: 10px  10px 10px 0;
}

.reply {
    border-radius: 5px  10px 10px 5px;
    margin: 5px 0 5px 0;
    padding: 10px;
}

.avatar {
    border-radius: 50px;
    width: 45px;
    height: 45px;
    position: absolute;
    bottom: 5px;
    color: white;
    text-align: center;
    vertical-align: middle;
    line-height: 45px;
}

.tail {
    width: 15px;
    height: 15px;
    position: absolute;
    bottom: 5px;
    left: 45px
}

.time {
    margin-right: 10px;
    text-align: right;
    font-size: 18px;
    color: gray;
    margin-top: 2px;
}

code {
    font-family: "Noto Mono";
    background-color: chocolate;
    border-radius: 2px;
}

tg-spoiler {
    background-color: darkgray;
    border-radius: 2px;
}

blockquote {
    border-radius: 5px  10px 10px 5px;
    background: rgba(108, 191, 98, 0.1);
    margin: 5px 0 5px 0;
    border-left: 5px solid #6cbf62;
    width: fit-content;
    padding: 10px;
}

pre {
    font-family: Noto Mono;
    border-radius: 5px  10px 10px 5px;
    background: rgba(86, 163, 115, 0.1);
    margin: 5px 0 5px 0;
    border-left: 5px solid #56a373;
    width: fit-content;
    padding: 10px;
}

